--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
     <title>PIZZAPIZZAPIZZAPIZZAPIZZA</title>
 </head>
+
 <body>
-<header>
-    PIZZAPIZZAPIZZAPIZZAPIZZAPIZZAPIZZA
-</header>
-<br>
+    <header>
+        PIZZAPIZZAPIZZAPIZZAPIZZAPIZZAPIZZA
+    </header>
+    <br>
     <h1>
 
     </h1>
-    
+
 </body>
+
 </html>
