criação e estilização do cabeçalho

--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/reset.css">
+    <link rel="stylesheet" href="./style/main.css">
+    <link rel="stylesheet" href="./style/samples.css">
     <title>PIZZAPIZZAPIZZAPIZZAPIZZA</title>
 </head>
 
 <body>
-    <header>
-        PIZZAPIZZAPIZZAPIZZAPIZZAPIZZAPIZZA
+
+    <!-- block__element--modifier  -->
+    <header class="header">
+        <h1 class="header__title">Pizza'sPizza -
+            <span class="header__title--lightsalmon">Menu</span>
+        </h1>
     </header>
-    <br>
-    <h1>
 
-    </h1>
-
+    <!--  
+    <div class="pai">
+        <div class="filho">
+        </div>
+    </div>
+-->
+    
 </body>
 
 </html>
