troca do titulo do site

--- a/index.html
+++ b/index.html
@@ -17,24 +17,20 @@
 
     <!-- block__element--modifier  -->
     <header class="header">
-        <h1 class="header__title">Pizza'sPizza -
+        <h1 class="header__title">Pizza Crust -
             <span class="header__title--lightsalmon">Menu</span>
         </h1>
     </header>
     <main>
         <form class="form" action="#">
             <span>Login</span>
-            <input class="form__input" type="text" name="" id="login" placeholder="login">
-            <input class="form__input" type="password" name="" id="senha" placeholder="Senha">
+            <input class="form__input" type="email" name="" id="login" placeholder="login" required>
+            <input class="form__input" type="password" name="" id="senha" placeholder="senha" required maxlength="8" minlength="8">
             <div class="form__btn--area">
-            <input class="form__btn" type="button" value="Register">
-            <input class="form__btn form__btn--action" type="submit" value="login">
+                <input class="form__btn" type="button" value="Register">
+                <input class="form__btn form__btn--action" type="submit" value="login">
             </div>
         </form>
-
-
-
-
 
     </main>
 
