--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
     <!-- block__element--modifier  -->
     <header class="header">
+        <div class="logo">
+<img class="header__logo" src="./imagens/pizzalogo.png" alt="logo">
+        </div>
         <h1 class="header__title">Pizza Crust -
             <span class="header__title--lightsalmon">Menu</span>
         </h1>
